# dark-factory

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  package.json  pyproject.toml
ticket-manager/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
ticket-manager/backend/alembic/: env.py
ticket-manager/backend/alembic/versions/: 003_create_projects.py  004_create_tickets.py  005_create_ticket_assignments.py  006_create_progress_updates.py  007_create_ticket_events.py  010_add_project_code.py  011_add_ticket_fields.py  012_add_tags.py  013_add_users_blocked_at.py  014_add_ticket_resource_fields.py  015_add_fsm_fields.py
ticket-manager/backend/scripts/: seed_dev.py
ticket-manager/backend/src/: main.py
ticket-manager/backend/src/core/: config.py  database.py  security.py
ticket-manager/backend/src/models/: base.py  project.py  tag.py  ticket.py  ticket_assignment.py  user.py
ticket-manager/backend/src/schemas/: assignment.py  auth.py  event.py
ticket-manager/backend/src/services/: assignment_service.py  auth_service.py  event_service.py  progress_service.py  resource_service.py  transition_service.py  workflow_service.py
ticket-manager/backend/src/ticket_manager_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ticket-manager/backend/tests/: conftest.py
ticket-manager/backend/tests/contract/: test_assignments.py  test_events.py  test_orchestrator.py  test_resources.py  test_tickets.py
ticket-manager/backend/tests/integration/: test_audit_service.py  test_fsm_service.py  test_ticket_service.py
(+1009 files in other folders)
