[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-manager-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic[email]>=2.9,<3",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.5.0",
    "pyasn1>=0.6.3",
    "bcrypt==4.1.3",
    "structlog==24.2.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio==1.3.0",
    "pytest-httpx>=0.36.2,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "types-python-jose>=3.3.4.20240106,<4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
